# bloxinsights

./: .gitignore  biome.jsonc  next.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: ccu-cron.yml
app/: globals.css  layout.tsx
app/(app)/: page.tsx
app/(app)/privacy/: page.tsx
app/(app)/terms/: page.tsx
app/(tools)/rbxlx-to-rojo/: page.tsx
app/analyze/: page.tsx
app/api/analyze/: route.ts
app/dashboard/: page.tsx
app/games/: page.tsx
app/generate/: page.tsx
app/genres/: page.tsx
app/help/: page.tsx
app/mockups/: page.tsx
app/settings/: page.tsx
app/top/: page.tsx
app/trending/: page.tsx
components/: app-shell.tsx  app-sidebar.tsx  chart-area-interactive.tsx  create-thumbnail-dialog.tsx  dashboard-header.tsx  data-table.tsx  games-columns-menu.tsx  icons.tsx  nav-main.tsx  nav-secondary.tsx  nav-thumbnails.tsx  nav-tools.tsx  nav-user.tsx  section-cards.tsx  site-footer.tsx  thumbnail-empty.tsx  user-auth-form.tsx
components/ai-elements/: code-block.tsx  file-tree.tsx  inline-citation.tsx  tool.tsx
components/ui/: attachment.tsx  button-group.tsx  button.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  hover-card.tsx  pagination.tsx  scroll-area.tsx  select.tsx  table.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx
crates/rbxlx-to-rojo-wasm/: Cargo.toml
crates/rbxlx-to-rojo-wasm/src/: convert.rs  lib.rs  memory_fs.rs  structures.rs
lib/: auth.ts  ccu.ts  config.ts  fonts.ts  games-columns.ts  roblox.ts  schema.ts  thumbnails.ts  utils.ts
scripts/: backfill-created-dates.mjs  backfill-genres.mjs  build-wasm.mjs  capture-ccu.mjs
(+31 files in other folders)
